New routes/controllers 	modified:   bin/www 	new file:   controllers/skills.js 	new file:   models/skill.js 	modified:   public/stylesheets/style.css 	modified:   routes/index.js 	new file:   routes/skills.js 	deleted:    routes/users.js 	renamed:    app.js -> server.js 	modified:   views/index.ejs 	new file:   views/skills/index.ejs 	new file:   views/skills/show.ejs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,4 +5,15 @@ body {
 
 a {
   color: #00B7FF;
+  border: #00B7FF solid 1px;
+  border-radius: 25px;
+  padding: 5px;
+  
+}
+a:hover{
+  background-color: cyan;
+}
+
+li {
+  margin: 20px;
 }
