Update and edit skills 	modified:   controllers/skills.js 	modified:   models/skill.js 	modified:   public/stylesheets/style.css 	modified:   routes/skills.js 	new file:   views/skills/edit.ejs 	modified:   views/skills/index.ejs 	new file:   views/skills/new.ejs 	modified:   views/skills/show.ejs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,4 +16,17 @@ a:hover{
 
 li {
   margin: 20px;
+  list-style: none;
+}
+.delete-form {
+  display: inline-block;
+  margin-right: 10px;
+}
+	
+.delete-form button {
+  color: red;
+}
+	
+li {
+  list-style: none;
 }
