--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -2,11 +2,20 @@
 <ul>
     <% skills.forEach(function(t) { %>
         <li>
+            <form action="/skills/<%= t.id %>?_method=DELETE" 
+            method="POST"
+            class="delete-form"
+            >   
+            <button type="submit">X</button>
+            </form>
             <a href="/skills/<%= t.id %>"><%= t.skill %></a>
             - 
             <%= t.learnt ? 'learnt' : 'not learnt' %>
         </li>
         <% }); %>
     </ul>
+    <a href="/skills/new">Add New Skill</a>
+
+
     <%- include('../partials/footer') %>
     
