--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -2,5 +2,5 @@
 
 <h3><%= skill.skill %></h3>
 <h3>learnt: <%= skill.learnt ? 'Yes' : 'No' %></h3>
-
+<a href="/skills/<%= skill.id %>/edit">Edit a Skill</a>
 <%- include('../partials/footer') %>
